<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        android:id="@+id/linear_layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#000022"
        tools:context=".AudioListPage">

        <androidx.cardview.widget.CardView
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="top"
            app:cardBackgroundColor="#0DDFCE"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp">

            <ImageView
                android:id="@+id/BackToHome"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/abc_vector_test" />

            <TextView
                android:id="@+id/Librarygetname"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:text="@string/textview"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/OurLib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="start"
        android:text="@string/my_audio"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <ImageView
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center|right"
        android:layout_weight="1"
        android:src="@drawable/add_image" />


</LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_audiolist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
